--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -26,6 +26,6 @@
     <div class="footer__container-down">
         <div class="footer__a-down">© 2021</div>
         <a class="footer__a-down footer__a-down-school" href="https://rs.school/" target="_blank">The Rolling Scopes School</a>
-        <div class="footer__a-down">Username</div>
+        <div class="footer__a-down footer__a-down-username">Username</div>
     </div>
 </footer>
