--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -7,8 +7,18 @@
             <div class="explore__paragraf explore__paragraf-2">It was cleaned in 1984 to remove a <span class="explore__words">"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</div>
             <div class="explore__paragraf explore__paragraf-3">The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</div>
         </div>
-        <div class="explore__div">
-            <img class="explore__img" src="../../../img/explore/picture_explore_all.png" alt="photo.png">
+        <div class="explore__img">
+            <div class="explore__img-relative">
+                <div class="explore__div-yellow">
+                    <canvas class="explore__yellow-div"></canvas>
+                </div>
+                <img class="explore__img-after" src="../../../img/explore/slider-after.webp" alt="photo.png">
+                <!-- <img class="explore__img-absolute explore__img-before" src="../../../img/explore/slider-before.webp" alt="photo.png">
+                <canvas class="explore__canvas">
+                    <img class="explore__img" src="../../../img/explore/slider-after.webp" alt="photo.png">
+                </canvas>-->
+                <img class="explore__slider" src="../../../img/explore/explore slider.png" alt="slider.png">
+            </div>
         </div>
     </div>
 </section>
