--- a/src/scss/sections/welcome.scss
+++ b/src/scss/sections/welcome.scss
@@ -284,7 +284,7 @@
         opacity: 0;
     }
     &__span{
-        background-color: white;
+        background-color: var(--palette-primary-light);
     }
     &__span-1{
         background-color: var(--palette-secondary-light);
