--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -34,6 +34,7 @@
 // //Admin page
 // @import "sections/admin";
 @import "sections/footer";
+@import "sections/registration-page.scss";
 // //Login page
 // @import "sections/login";
 // //Register page
