--- a/src/html/includes/main/video.html
+++ b/src/html/includes/main/video.html
@@ -6,14 +6,17 @@
     <iframe class="video__main-frame" src="https://www.youtube.com/embed/zp1BXPX8jcU?si=Zy4Job7HFMv4NsT5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <div class="video__container">
         <iframe class="video__frame" src="https://www.youtube.com/embed/aWmJ5DgyWPI?si=H85tY1qiikp8xfTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video__overlay video__overlay-1"></div>
         <iframe class="video__frame video__frame-2" src="https://www.youtube.com/embed/Vi5D6FKhRmo?si=WhHSVVS17bNR0Rx9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video__overlay video__overlay-2"></div>
         <iframe class="video__frame video__frame-3" src="https://www.youtube.com/embed/NOhDysLnTvY?si=5t7R4CF4vOVp_k1n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video__overlay video__overlay-3"></div>
     </div>
     <div class="video__counter">
         <form class="video__form">
             <img class="video__arrow" src="../../../img/journey/icon-left-arrow.svg" alt="left-arrow.svg">
             <input class="video__radio" type="radio">
-            <span class="video__span"></span>
+            <span class="video__span video__span-1"></span>
             <input class="video__radio" type="radio">
             <span class="video__span"></span>
             <input class="video__radio" type="radio">
