--- a/src/html/includes/main/welcome.html
+++ b/src/html/includes/main/welcome.html
@@ -4,7 +4,7 @@
         <div class="welcome__shadow"></div>
         <div class="welcome__caroisel">
             <div class="welcome__counter">
-                <div>01</div>
+                <div class="welcome__counter-first">01</div>
                 <div>|</div>
                 <div>05</div>
             </div>
@@ -21,8 +21,8 @@
                 <span class="welcome__span"></span>
             </form>
             <div class="welcome__arrows">
-                <img class="welcome__arrow" src="../../../img/hero/arrow-left.svg" alt="back.png">
-                <img class="welcome__arrow" src="../../../img/hero/arrow-right.svg" alt="forward.png">
+                <img class="welcome__arrow welcome__arrow-prev" src="../../../img/hero/arrow-left.svg" alt="back.png">
+                <img class="welcome__arrow welcome__arrow-next" src="../../../img/hero/arrow-right.svg" alt="forward.png">
             </div>
         </div>
     </div>
