--- a/src/scss/sections/explore.scss
+++ b/src/scss/sections/explore.scss
@@ -7,8 +7,12 @@
             line-height: 40px;
         }
         &__img{
-            width: 100%;
-            height: auto;
+            height: 87.62vw;
+            max-height: 368px;
+        }
+        &__img-relative, &__yellow-div{
+            width: 90vw;
+            max-width: 380px;
         }
     }
 
@@ -23,14 +27,22 @@
             line-height: 60px;
         }
         &__img{
-            width: 100%;
-            height: auto;
+            height: 92.10vw;
+            max-height: 705px;
+        }
+        &__img-relative, &__yellow-div{
+            width: 94.79vw;
+            max-width: 728px;
         }
     }
 
     @include media-breakpoint-down(md){
         margin-top: var(--margin-top-40);
 
+        &__img{
+            width: 100%;
+        }
+            
         &__paragraf{
             display: none;
         }
@@ -61,12 +73,17 @@
         &__paragraf{
             font-size: 20px;
         }
+        &__img-relative, &__yellow-div{
+            width: 70.31vw;
+            max-width: 720px;
+        }
         &__img{
             width: 70.31vw;
-            height: auto;
+            height: 68.36vw;
             margin-top: var(--margin-top-60);
             margin-left: 12.89vw;
             max-width: 720px;
+            max-height: 700px;
         }
         &__container{
             margin-top: var(--margin-top-60);
@@ -123,11 +140,17 @@
             gap: 20px;
             width: 75%;
         }
+        &__img-relative, &__yellow-div{
+            width: 37.50vw;
+            max-width: 720px;
+        }
         &__img{
             left: 50vw;
             width: 37.50vw;
+            height: 36.46vw;
             margin-top: 90px;
             max-width: 720px;
+            max-height: 700px;
         }
         &__slider{
             left: 75.93vw;
@@ -156,9 +179,44 @@
     &__words{
         color: var(--palette-tertiary-text);
     }
-
     &__line{
         background-color: var(--palette-primary-dark);
         height: 3px;
+    }
+
+    &__img-relative{
+        position: relative;
+        height: 100%;
+    }
+    &__img-after{
+        height: 100%;
+        width: auto;
+        display: block; 
+    }
+    &__slider{
+        cursor: pointer;
+        position: absolute;
+        z-index: 300;
+        top:0;
+        height: 100%;
+        width: auto;
+        left: 97.3%;
+    }
+    &__yellow-div{
+        position: absolute;
+        height: 100%;
+        top: 0;
+        left: 0;
+        //background: rgba(201, 148, 1, 0.15); /* Жёлтая вуаль */
+        z-index: 200;
+    }
+    &__div-yellow{
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 150;
     }
 }
