--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -41,7 +41,7 @@
                     <a class="header__a" href="#gallery">Gallery</a>
                     <a class="header__a" href="#tickets">Tickets</a>
                     <a class="header__a" href="#contacts">Contacts</a>
-                    <a class="header__a" href="./main/registration-page.html">Log in</a>
+                    <a class="header__a header__a-log-in" href="autorisation.html">Log in</a>
                 </form>
             </div>
         </div>
