--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -11,11 +11,11 @@
                     <div class="tickets__text tickets__text-point">Permanent exhibition</div>
                 </div>
                 <div class="tickets__div-point">
-                    <input class="tickets__radio" type="radio" name="radio">
+                    <input class="tickets__radio tickets__radio-2" type="radio" name="radio">
                     <div class="tickets__text tickets__text-point">Temporary exhibition</div>
                 </div>
                 <div class="tickets__div-point">
-                    <input class="tickets__radio" type="radio" name="radio">
+                    <input class="tickets__radio tickets__radio-3" type="radio" name="radio">
                     <div class="tickets__text tickets__text-point">Combined Admission</div>
                 </div>
             </form>
@@ -78,9 +78,9 @@
                 <div class="booking__div booking__select"></div>
             </div>
             <div class="booking__select-options">
-                <div class="booking__div booking__option">Permanent exhibition</div>
-                <div class="booking__div booking__option">Temporary exhibition</div>
-                <div class="booking__div booking__option">Combined Admission</div>
+                <div class="booking__div booking__option booking__option-1">Permanent exhibition</div>
+                <div class="booking__div booking__option booking__option-2">Temporary exhibition</div>
+                <div class="booking__div booking__option booking__option-3">Combined Admission</div>
             </div>
             <div class="booking__div-entry">
                 <div class="booking__entry-title">Entry Tickets</div>
@@ -144,15 +144,15 @@
                             <div class="booking__card-datetime">
                                 <div class="booking__card-input-2 booking__card-month">01</div>
                                 <div class="booking__arrows">
-                                    <img class="booking__arrow" src="../../../img/form/arrow-up.png" alt="arrow.png">
-                                    <img class="booking__arrow" src="../../../img/form/arrow-down.png" alt="arrow.png">
+                                    <img class="booking__arrow booking__arrow-1" src="../../../img/form/arrow-up.png" alt="arrow.png">
+                                    <img class="booking__arrow booking__arrow-2" src="../../../img/form/arrow-down.png" alt="arrow.png">
                                 </div>
                             </div>
                             <div class="booking__card-datetime">
                                 <div class="booking__card-input-2 booking__card-year">2024</div>
                                 <div class="booking__arrows">
-                                    <img class="booking__arrow" src="../../../img/form/arrow-up.png" alt="arrow.png">
-                                    <img class="booking__arrow" src="../../../img/form/arrow-down.png" alt="arrow.png">
+                                    <img class="booking__arrow booking__arrow-3" src="../../../img/form/arrow-up.png" alt="arrow.png">
+                                    <img class="booking__arrow booking__arrow-4" src="../../../img/form/arrow-down.png" alt="arrow.png">
                                 </div>
                             </div>
                         </div>
