--- a/src/html/includes/main/video.html
+++ b/src/html/includes/main/video.html
@@ -14,7 +14,7 @@
     </div>
     <div class="video__counter">
         <form class="video__form">
-            <img class="video__arrow" src="../../../img/journey/icon-left-arrow.svg" alt="left-arrow.svg">
+            <img class="video__arrow video__arrow-1" src="../../../img/journey/icon-left-arrow.svg" alt="left-arrow.svg">
             <input class="video__radio" type="radio">
             <span class="video__span video__span-1"></span>
             <input class="video__radio" type="radio">
@@ -25,7 +25,7 @@
             <span class="video__span"></span>
             <input class="video__radio" type="radio">
             <span class="video__span"></span>
-            <img class="video__arrow" src="../../../img/journey/icon-right-arrow.svg" alt="right-arrow.svg">
+            <img class="video__arrow video__arrow-2" src="../../../img/journey/icon-right-arrow.svg" alt="right-arrow.svg">
         </form>
     </div>
 </section>
