--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -2,12 +2,13 @@
   //colors
   --palette-primary-main: #030303;
   --palette-primary-main-opacity: rgba(3, 3, 3, 0);
-  --palette-primary-dark: #710707;
+  --palette-primary-dark: rgb(113, 7, 7);
+  --palette-primary-dark-hover: rgb(173, 38, 38);
   --palette-primary-light: #ffffff;
   --palette-secondary-light: #9d8665;
   --palette-tertiary-main: #e7e7e7;
   --palette-tertiary-light: #bcbcbc;
-  --palette-tertiary-dark: #939393;
+  --palette-tertiary-dark: rgb(147, 147, 147);
   --palette-primary-text: #ffffff;
   --palette-secondary-text: #030303;
   --palette-tertiary-text: #9d8665;
