--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -34,7 +34,9 @@
 // //Admin page
 // @import "sections/admin";
 @import "sections/footer";
+@import "sections/profile.scss";
 @import "sections/registration-page.scss";
+@import "sections/autorisation-page.scss";
 // //Login page
 // @import "sections/login";
 // //Register page
