--- a/src/html/includes/_html-top.html
+++ b/src/html/includes/_html-top.html
@@ -11,6 +11,7 @@
     <!-- <link rel="preload" href="../../fonts/" as="font" type="font/woff2" crossorigin> -->
     <link rel="stylesheet" href="css/main.min.css" />
     <link rel="shortcut icon" href="favicon/favicon.ico" />
+    <!-- Подключите Firebase и необходимые модули -->
 </head>
 
 <body>
